<resources>
    <string name="app_name">Evenro</string>
    <string name="signInTitel">Sign In</string>
    <string name="signInSubTitel">Give creatential to sign in your account</string>
    <string name="input_plaesholder1">Type your Email</string>
    <string name="input_plaesholder2">Type your Password</string>
    <string name="singIn_button">SIGN IN</string>
    <string name="line_text">or continue with</string>
    <string name="bottom_text1">Do not have an account?</string>
    <string name="bottom_text2">Sign Up</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="sign_up_sub_titel">Create account and enjoy all services</string>
    <string name="sign_up_botton">SIGN UP</string>
    <string name="input_plaesholder3">Type your full name</string>
    <string name="input_plaesholder4">Type your confirm password</string>
    <string name="sign_up_bottom_text1">Alraady have an account ? </string>
    <string name="sign_up_bottom_text2">Sign In</string>
    <string name="item_button">JOIN</string>
    <string name="event_details_prices">200$</string>
    <string name="event_details_button">BUY A TICKET</string>
    <string name="event_details_title_name">Music Show</string>
    <string name="event_details_locations">ABC Colombo, Colombo</string>
    <string name="event_details_date">2025-03-05</string>
    <string name="event_details_name">Ishan Nikeshala</string>
    <string name="event_details_event_organiser">Event Organiser</string>
    <string name="event_details_event_description">Description</string>
    <string name="event_details_event_descriptions">A music event show is an exciting gathering where artists perform live for an audience.
        It can range from intimate acoustic sessions to large-scale festivals featuring multiple acts.</string>
    <string name="user_profile_title">Profile</string>
    <string name="user_profile_name">Full Name *</string>
    <string name="user_profile_name_lable1">Mobile :</string>
    <string name="user_profile_name_edit1">Mobile Number *</string>
    <string name="user_profile_name_lable2">Email :</string>
    <string name="user_profile_name_edit2">Email Address *</string>
    <string name="user_profile_name_lable3">Address :</string>
    <string name="user_profile_name_edit3">Colombo, Sri lanka</string>
    <string name="user_profile_name_lable4">Birthday :</string>
    <string name="user_profile_edit_title">Edit Profile</string>
    <string name="user_profile_edit_name">Full Name</string>
    <string name="user_profile_edit_address">Address</string>
    <string name="user_profile_edit_mobile">Mobile</string>
    <string name="user_profile_edit_email">Email</string>
    <string name="user_profile_edit_dob">Birthday</string>
    <string name="user_profile_edit_button">SAVE CHANGES</string>
    <string name="organizer_profile">Organizer</string>
    <string name="organizer_tabe1">About</string>
    <string name="organizer_tabe2">Event</string>
    <string name="organizer_tabe3">Reviews</string>
    <string name="fragment_titel_about">About</string>
    <string name="search_title">Search</string>
    <string name="input_plaesholder5">Find amazing events</string>
    <string name="chipe_title1">Music</string>
    <string name="chipe_title2">Art</string>
    <string name="chipe_title3">Sport</string>
    <string name="add_event_title">Create New Event</string>
    <string name="add_event_details">Event Details</string>
    <string name="input_plaesholder6">Event Name *</string>
    <string name="input_plaesholder8">Event Date *</string>
    <string name="input_plaesholder9">Event Time *</string>
    <string name="input_plaesholder7">Type your Event Descriptions *</string>
    <string name="add_event_publish_button">PUBLISH EVENT</string>
    <string name="event_cart_title">Ticket</string>
    <string name="event_detail_view_location_button">View Location</string>
    <string name="add_locations">Choose Location</string>
    <string name="event_cart_gty">Seat</string>
    <string name="event_cart_price">Ticket Price</string>
    <string name="event_cart_num_qty">0</string>
    <string name="event_cart_multi">*</string>
    <string name="event_cart_num_price">200.00</string>
    <string name="event_cart_checkout">CHECKOUT</string>
    <string name="input_plaesholder10">00</string>
    <string name="title_activity_navigation_home">NavigationHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_name">Home</string>
    <string name="cart_item_total">Total *</string>

    <string name="input_plaesholder11">Price *</string>
    <string name="input_plaesholder12">Quantity *</string>
    <string name="input_plaesholder14">Mobile Number *</string>

    <string name="menu_account">My Profile</string>
    <string name="menu_calender">Calender</string>
    <string name="menu_setting">Purchasing History</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="welcome_home_title">Welcome!</string>
    <string name="welcome_home_view_all">View all</string>
    <string name="welcome_home_popular_event">Popular Event</string>
    <string name="welcome_home_category">Event Category</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="purchasing_history">History</string>
    <string name="purchasing">Purchasing</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buying_ticket_view_button">View</string>
    <string name="buying_ticket_title">Purchase Ticket</string>
    <string name="purchase_title">Purchasing History</string>
    <string name="ticket_date">Date</string>
    <string name="ticket_time">Time</string>
    <string name="ticket_value">Value</string>
    <string name="ticket_sate">Seat</string>
    <string name="ticket_ticket">Ticket</string>
    <string name="download_ticket">DOWNLOAD TICKET</string>
    <string name="title_activity_dashborad_main">DashboradMain</string>
    <string name="custome_loacation_spinner">Select Location</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_ticket">Add Ticket</string>
    <string name="home_main_title">Experience Events Like Never Before.</string>
    <string name="profile_icon">N</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="delete_wishlist">DELETE WISHLIST</string>
    <string name="event_oragnozer">Event Oragnozer</string>
    <string name="wishlist">Wishlist</string>
    <string name="add_to_wishlist">ADD TO WISHLIST</string>
    <string name="my_event">My Event</string>
    <string name="edite_event">Edite</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="update_event">Update Event</string>
    <string name="upgrate_event">UPGRATE EVENT</string>
    <string name="witchlist">Witchlist</string>
    <string name="add_event">ADD EVENT</string>
    <string name="edite_200_00">200.00</string>
    <string name="edit_qty_10">10</string>
    <string name="event_time">Event Time</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="seat">Seat</string>
    <string name="purch_1">1</string>


</resources>