<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#1E272C"
    tools:context=".EditProfileActivity">

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/inter_semi_bold"
        android:text="@string/user_profile_edit_title"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/user_profile_edit_name"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout16" />

    <EditText
        android:id="@+id/editTextText1"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custome_input"
        android:ems="15"
        android:fontFamily="@font/inter_regular"
        android:hint="@string/user_profile_name"
        android:inputType="text|textEmailAddress"
        android:paddingStart="15dp"
        android:paddingEnd="5dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView33" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custome_input"
        android:ems="15"
        android:fontFamily="@font/inter_regular"
        android:hint="@string/user_profile_name_edit2"
        android:inputType="text|textEmailAddress"
        android:paddingStart="15dp"
        android:paddingEnd="5dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView36" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custome_input"
        android:ems="15"
        android:fontFamily="@font/inter_regular"
        android:hint="@string/user_profile_name_edit1"
        android:inputType="text|textEmailAddress"
        android:paddingStart="15dp"
        android:paddingEnd="5dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView35"
        app:layout_constraintTop_toBottomOf="@+id/textView35" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/custome_input"
        android:ems="15"
        android:fontFamily="@font/inter_regular"
        android:hint="@string/user_profile_name_edit3"
        android:inputType="text|textEmailAddress"
        android:paddingStart="15dp"
        android:paddingEnd="5dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView37" />

    <EditText
        android:id="@+id/editTextText5"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/custome_input"
        android:ems="15"
        android:fontFamily="@font/inter_regular"
        android:hint="@string/user_profile_name_edit3"
        android:inputType="text|textEmailAddress"
        android:paddingStart="15dp"
        android:paddingEnd="5dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/imageButton9"
        app:layout_constraintStart_toStartOf="@+id/textView38"
        app:layout_constraintTop_toBottomOf="@+id/textView38" />

    <FrameLayout
        android:id="@+id/frameLayout16"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/textView32"
        app:layout_constraintStart_toStartOf="@+id/textView32"
        app:layout_constraintTop_toBottomOf="@+id/textView32">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/profile"
            app:civ_border_color="#FF000000" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/eidt_icon_framelayout"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout16"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout16">

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="@color/main_color"
            app:srcCompat="@drawable/shape_curicle" />

        <FrameLayout
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:backgroundTint="@color/main_color">

            <ImageButton
                android:id="@+id/imageButton14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#F56B10"
                app:srcCompat="@drawable/baseline_create" />
        </FrameLayout>
    </FrameLayout>

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/user_profile_edit_mobile"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/editTextText1"
        app:layout_constraintTop_toBottomOf="@+id/editTextText1" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/user_profile_edit_email"
        app:layout_constraintStart_toStartOf="@+id/editTextText2"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/user_profile_edit_address"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/editTextText3"
        app:layout_constraintTop_toBottomOf="@+id/editTextText3" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/user_profile_edit_dob"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/editTextText4"
        app:layout_constraintTop_toBottomOf="@+id/editTextText4" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#FCF5FD"
        android:tint="@color/main_color"
        app:layout_constraintBottom_toBottomOf="@+id/editTextText5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editTextText5"
        app:srcCompat="@drawable/baseline_calendar" />

    <Button
        android:id="@+id/button6"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/button_color"
        android:fontFamily="@font/inter_semi_bold"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/user_profile_edit_button"
        android:textSize="13sp"
        app:iconPadding="5dp"
        app:layout_constraintEnd_toEndOf="@+id/imageButton9"
        app:layout_constraintStart_toStartOf="@+id/editTextText5"
        app:layout_constraintTop_toBottomOf="@+id/editTextText5" />

</androidx.constraintlayout.widget.ConstraintLayout>